--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8781,6 +8781,8 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  FRA_governement_support_to_le_faisceau:0 "Support \"Le Faisceau\""
  FRA_governement_support_to_le_faisceau_desc:0 "George Valois and Jacques Arthuys formed a party called "le Faisceau", composed of monarchists and reformist syndicalist socialists. This strange party remains aligned with our nationalist ideals and deserves our support."
 
+FRA_appoint_a_new_governement:0 "Form a New Cabinet"
+
  BUL_BW2_outcome_timer:0 "Bulgarian Intervention Outcome"
  BUL_BW2_outcome_timer_desc:0 "War cant last forever, if we dont beat the Balkan League fast enough, we will have to make a compromise over macedonian claims."
  kis_secondbalkanwar_victory:0 "§Y[BUL.getFlag][BUL.getName]§! won the Second Balkan War"
