--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -14623,6 +14623,7 @@ ww1_morocco.26.f: "We should leave before we embarrass ourselves further..."
 
 
 FRA_emperor_will_appoint_a_prime_minister:0 "§YEmperor Louis Napoléon§! will appoint a §YPrime Minister§! in next days."
+FRA_you_can_change_the_prime_minister_later:0 "A §YDecision§! will remain available, allowing you to change your mind later."
 
  ww1_france.440.t:0 "Napoléon V Assassination"
  ww1_france.440.d:0 "French Emperor Napoleon V was assassinated yesterday in a terrorist attack in the south of France. Around twenty anarchist partisans ambushed the imperial convoys, killing the emperor in the exchange of fire. The terrible news caused numerous clashes in France, especially since the Emperor had reigned for less than 3 years.\n\nThe rule of succession of the House of Bonaparte makes Louis Joseph Napoleon the next emperor, whose coronation will be carried out in the coming weeks at Paris Cathedral."
