--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -7431,16 +7431,16 @@ FRA_ministery_of_national_defense_desc:0 "Emperor Napoleon wanted to create a mi
  FRA_moderate_protectionism:0 "Moderate Protectionism"
  FRA_moderate_protectionism_desc:0 "The Bonapartist government has always maintained a cautious position regarding European liberalism. Far from rejecting the idea of a free market, [FRA.getLeader] instead proposes the establishment of national priority rules intended to find a happy medium between the internal competitiveness of French companies and openness to the market economy."
 
- FRA_sympathize_with_league_des_patriotes:0 "Sympathize With League des Patriotes"
+ FRA_sympathize_with_league_des_patriotes:0 "Sympathize With the League des Patriotes"
  FRA_sympathize_with_league_des_patriotes_desc:0 "The organization chaired by Maurice Barrès protects the rights of the French and the supremacy of the nation. The support of this organization, as of all nationalist groups, is an important stone in the building of national glorification."
 
- FRA_join_act_with_nationalists:0 "Join Act With Smaller Nationalist Groups"
+ FRA_join_act_with_nationalists:0 "Joint Act With Smaller Nationalist Groups"
  FRA_join_act_with_nationalists_desc:0 "Several nationalist political organizations are emerging, inspired by the so-called “fascist” movements of Italy, Spain and Germany. The collective, socialist and militarist representation of these movements constitutes excellent support for the maintenance of our military industry and in the political rallying around the emperor."
 
  FRA_three_plan_battle:0 "Three Plan Battle"
  FRA_three_plan_battle_desc:0 "The air component was essential to the French victory. Research and production efforts must be maintained in order to design an indestructible fleet."
 
- FRA_militarize_bon_du_tresor:0 "Militarize the Bons du Trésor"
+ FRA_militarize_bon_du_tresor:0 "Militarise the Bons du Trésor"
  FRA_militarize_bon_du_tresor_desc:0 "In order to maintain good production capacity, the state can go into debt by generating treasury bonds sent to French companies. This voucher is a guarantee of payment over time which allows us to consolidate our expenses in the short term."
 
  FRA_modernize_armored_corps:0 "Modernize Armored Corps"
