--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8001,9 +8001,11 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_minority_header_tt:0 "[ottoman_minority_header_tt]"
  ottoman_minority_header_tt1:0 "Ottoman Minority Map"
  ottoman_minority_header_tt2:0 "Turkish Minority Map"
+ ottoman_minority_albania_header_tt:0 "Albania Minority Map"
  ottoman_minority_desc_tt:0 "[ottoman_minority_desc_tt]"
  ottoman_minority_desc_tt1:0 "§LOur empire has always been an ethnically diverse one. From different peoples of the Balkans, to Armenians and Kurds in the east, and predominantly Arabs in the south; there are many non-Turkic ethnic groups residing within our empire.§!"
  ottoman_minority_desc_tt2:0 "§LOur nation has always been an ethnically diverse one. From different peoples of the Balkans, to Armenians and Kurds in the east, and predominantly Arabs in the south; there are many non-Turkic ethnic groups residing within our empire.§!"
+ ottoman_minority_albania_desc_tt:0 "§LAs a vilayet within the Ottoman Empire created for Albanians by merging 4 major Albanian populated vilayets, non-ethnic Albanians have become our responsibility. South-Slavs, Greeks and Turks alike, has to be managed within this new autonomy.§!"
  TUR_brewing_yemeni_resistance:0 "Brewing Yemeni Resistance"
  TUR_settle_turks_in_thrace_decision:0 "Settle Turks in Thrace"
  TUR_macedonian_conflict_intervention:0 "Macedonian Conflict Intervention"
