interwar france path

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -6504,13 +6504,29 @@
  FRA_franciste_rethoric:0 "Franciste Rethoric"
  FRA_franciste_rethoric_desc:0 "It is obvious that the new government is ambitious and that its reforms cannot only be economic. France must maintain its aura, and to do so, it must unite around strong values aimed at projecting an inevitable influence on the other nations of Europe."
 
- FRA_syndicalism:0 "Syndicalism"
- FRA_syndicalism_desc:0 "The ideas of Georges Valois, Georges Sorel and Pierre-Joseph Proudhon cannot be distorted by an exacerbated nationalism, latent anti-Semitism and a forgetting of the struggle of the working classes. A factionalism has established itself within the imperialist group, it is imperative to clarify the party line."
+ FRA_undermine_the_old_guard:0 "Undermine the Old Guard"
+ FRA_undermine_the_old_guard_desc:0 "France is evolving towards a new social and economic doctrine which is no longer compatible with the exaggerated republicanism of certain representatives of the united right. The latter must be removed outright or by force from positions of responsibility, then isolated from the political scene."
 
- FRA_nationalism:0 "National-Socialism"
- FRA_nationalism_desc:0 "A movement is starting in Europe, first in Italy, then here in France. The association of nationalism, royalism and class struggle has always been the objective of the Proudhon circle from which Georges Valois seems inexorably moving away. He no longer has his place in the party."
+ FRA_death_to_plutocracy:0 "Death to Plutocracy"
+ FRA_death_to_plutocracy_desc:0 "The aristocracy takes advantage of national wealth and accumulates it without reinjecting it into the state coffers, impoverishing the nation. They are, along with the socialists, natural enemies and must be fought."
 
+ FRA_milice_socialiste_nationale:0 "Milice Socialiste Nationale"
+ FRA_milice_socialiste_nationale_desc:0 "Our supporters are openly engaged in the fight against socialism, banditry and the defense of the nation. Thus, young popular guards called "blue shirts" gradually gathered in the main cities of France."
 
+ FRA_date_fascist_consitution:0 "[Date.getYear] Executive Constitution"
+ FRA_date_fascist_consitution_desc:0 "With the Emperor relative political absence, we get an ideal opportunity to consolidate our position in power by drafting a new constitution offering more power to the prime minister. This great political revolution will allow us to make Napoleon a popular consultative figure who will not hinder executive work"
+
+ FRA_monarchist_syndicalism:0 "Monarchist-Syndicalism"
+ FRA_monarchist_syndicalism_desc:0 "The ideas of Georges Valois, Georges Sorel and Pierre-Joseph Proudhon cannot be distorted by an exacerbated nationalism, latent anti-Semitism and a forgetting of the struggle of the working classes. A factionalism has established itself within the imperialist group, it is imperative to clarify the party line."
+
+ FRA_national_socialism:0 "National-Socialism"
+ FRA_national_socialism_desc:0 "A movement is starting in Europe, first in Italy, then here in France. The association of nationalism, royalism and class struggle has always been the objective of the Proudhon circle from which Georges Valois seems inexorably moving away. He no longer has his place in the party."
+
+ FRA_la_main_bleue:0 "La Main Bleue"
+ FRA_la_main_bleue_desc:0 "The Blue Hand is the secret service of the Francoist party, responsible for protecting its members and monitoring the political activities of its competitors. Its action can be linked to that of the government to facilitate the expansion of fascism in France."
+
+ FRA_strengthen_ties_with_italy:0 "Strengthen Ties with Italy"
+ FRA_strengthen_ties_with_italy_desc:0 "The strong regime of [ITA.getLeader] commands respect and constitutes the first organized fascist state in the world. We must follow the example of our neighbor and strengthen our mutual partnership, particularly in the area of infrastructure and military technologies."
 
  FRA_ww1_form_the_proudhon_circle:0 "Form the Proudhon Circle"
  FRA_ww1_form_the_proudhon_circle_desc:0 "The last 40 years have proven that the French Republic is weak. The best years of France were under the reigns of Kings and Emperors. Despite the defeat of Napoleon III, the people can, will, and will still believe in it."
