2 focuses for France

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -14827,3 +14827,21 @@ FRA_law_soon:0 "§GA law will be proposed soon by the §YParliament§! to addres
  ww1_france.486.t:0 "Georges Valois Resigns"
  ww1_france.486.d:0 "After only a few months in power, the Valois government collapsed. Victim of internal dissensions and an incoherent composition, it did not resist the strong opposition between Minister Bucard and the left wing of the party. After becoming unpopular and accused of being a communist, or a disguised SFIO trade unionist, Valois announced that he was leaving the government, a wish accepted by the emperor.\n\nValois is not stopping politics, however, he has promised to continue the monarchist-union struggle of the people."
  ww1_france.486.a:0 "This government didn't last long..."
+
+ ww1_france.487.t:0 "French Infrastructure Superproject"
+ ww1_france.487.d:0 "The French government represented by [FRA.getLeader] spoke with [ITA.getLeader] to present a bold industrial collaboration project in the northwest of Italy. The plan would benefit the border by establishing new high-capacity border roads to regulate burgeoning automobile traffic. In addition to the renovation of the highways, the creation of a common local investment fund was also proposed."
+ ww1_france.487.a:0 "Its benefical to Italy!"
+ ww1_france.487.b:0 "We dont need the French!"
+
+ ww1_france.488.t:0 "[FROM.getAdjective] Approval"
+ ww1_france.488.d:0 "The [FROM.getAdjective] government accepted our offer. The industrial project will therefore be a reality!"
+ ww1_france.488.a:0 "Its benefical to Italy!"
+
+ ww1_france.489.t:0 "[FROM.getName] Refused"
+ ww1_france.489.d:0 "Despite the obvious benefit that our project offered, [FROM.getName] refused it, questioning our government about their strategic position towards us..."
+ ww1_france.489.a:0 "Oh..."
+
+ ww1_france.490.t:0 "Franco-Italian Industrial Partnership"
+ ww1_france.490.d:0 "The governments of [FRA.getLeader] and [ITA.getLeader] have jointly validated a great infrastructure project in the Savoie-Piedmont region. This ambitious project includes the construction of new roads, railways and the renovation of several monuments and historic villages. This collaboration is part of a deeper process between the two states, which jointly fell into fascism after the Great War, despite having emerged victorious.\n\nThis kind of collaboration could happen again in the future, worrying political specialists who see it as an open door to united development of military technologies."
+ ww1_france.490.a:0 "A Step for European Unity!"
+ ww1_france.490.b:0 "Since its a civilian project..."
