--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -707,7 +707,7 @@ USA_southern_dockyards:0 "Southern Dockyards"
 USA_support_automobile_giants_desc:0 "Several new automobile manufacturer have been springing up as of late. As the future of transportation, we must do what we can to support these manufacturers and expand the automobile market."
 USA_eliminate_the_progressive_challengers:0 "Secure Control of the Party"
 USA_get_action:0 "Reinstate the House Dictatorship"
-USA_8_hour_work:0 "8 Hour Workweek"
+USA_8_hour_work:0 "Fair Hours for Fair Labor"
 USA_8_hour_work_desc:0 "Americans are overworked as it stands today. There is no reason why Americans should have to spend 10 hours a day working, when most studies show that a workers productivity falls off massively after the 8th hour. It's time to finally implement a national 8 hour workweek, which has shown success in corporations who have already implemented it."
  ENG_The_Best:0 "The Best"
  ENG_The_Best_desc:0 "We have the best machinery in the world."
@@ -929,7 +929,7 @@ USA_second_annual_message:0 "Second Annual Message"
 USA_second_annual_message_desc:0 "The Annual Message is our chance to speak directly to congress - and the American people, about our agenda and garner support. We must prepare in advance what agenda we plan to push."
 USA_reep_the_fruits_of_the_panama_canal:0 "Reep the Fruits of the Panama Canal"
 USA_reep_the_fruits_of_the_panama_canal_desc:0 "We are the one taking on the burden of building the Panama Canal, we deserve a reward for this. By elimating future toll rates for American ships, we can gain a large advantage on trade over the rest of the world."
-USA_8_hour_work_week:0 "8 Hour Work Day"
+USA_8_hour_work_week:0 "Fair Hours for Fair Labor"
 USA_8_hour_work_week_desc:0 "Americans are overworked as it stands today. There is no reason why Americans should have to spend 10 hours+ a day working, and most studies show that a workers productivity falls off massively after the 8th hour anyway."
 USA_reveal_weakness.tt:0 "Increasing the budget of the army won't be politically cheap. We will have to decide just how much §YPolitical Power§! we are willing to spend to get §5Congress§! to increase the funding of the army. The more §YPolitical Power§! we spend, the more thorough the investigation will be. After 365 days, the report on the state of our military will be complete. Depending on how thorough our investigation is, we will be able reduce the debuffs from the §YConsumer Based Economy§! national spirit, as well as gain potential rewards like §GMilitary Factories§!, §GArmy XP§! and possible §GHidden Focus's§!."
 USA_occupy_tientsin_desc:0 "China has exploded into chaos! We can take this opprotunity to occupy Tientsin, a decently large city and good position for a military base."
@@ -984,9 +984,9 @@ USA_nightmares_of_world_war:0 "Nightmares of a World War"
  USA_weeks_act_desc:0 "There is a large problem with American forests often facing mass deforestation by corporations, with nothing legally stopping them. To prevent a depletion of resources (and expand the governments power), we should authorize the Federal Government to purchase land deemed as necessary to protect."
  USA_1912_election:0 "1912 Elections"
  USA_1912_election_desc:0 ""
-USA_new_freedom:0 "New Freedom"
+USA_new_freedom:0 "Policy of 'New Freedom'"
 USA_new_freedom_desc:0 "American enterprise for too long has been in the hands of monopolies and trusts. Only through freedom of enterprise, can America truely be free at all. With Wilsons bold progressive agenda, we can secure these "new freedoms" for all Americans"
-USA_oscar_tariff:0 "Underwood-Simmons Tariff Act"
+USA_oscar_tariff:0 "Foundations for Fiscal Sustainability"
 USA_oscar_tariff_desc:0 "One of the uniting beliefs of the Democrat Party is the idea of lower tariffs. Especially with Tafts recklessly high Tariffs, a huge reduction to tariffs across the board would help consumers a lot. Although tariffs do make up a lot of government income, finally reintroducing the income tax will be more then enough to make up for the lost revenue."
  USA_re_affirm_kill_all_researchers:0 "Reaffirm American Isolation"
 USA_stock_homestead_act:0 "Stock-Raising Homestead Act"
@@ -1022,7 +1022,7 @@ USA_gain_support_of_trade_union_desc:0 "Many unions support the exact same polic
  USA_CCE_advisors_desc:0 "Whether we could save the EEC or not, many of their members are experienced and wise people that would do well as advisors in our new administration. Let's invite them to advise us."
  USA_clayton_anti_trust:0 "Clayton Antitrust Act"
  USA_clayton_anti_trust_desc:0 "American capitilism is still need of reform. The Clayton Antitrust act will help fight things like price discrimination and so called "exclusive deals" that continue to hurt the free market."
- USA_underwood_simmons_tariff:0 "Underwood Simmons Tarrif"
+ USA_underwood_simmons_tariff:0 "Foundations for Fiscal Sustainability"
  USA_underwood_simmons_tariff_desc:0 "Tarrifs are way too high in this country! A bill to reduce tarrifs will help the consumer, and while we're at it we can finally implement a national income tax to make up for the lost revenue!"
  USA_emergency_tax_increases:0 "Emergency Tax Increases"
  USA_emergency_tax_increases_desc:0 "We set tax rates too low! Recent rearmment efforts have proved expensive, and we need the extra income to fund said efforts. Let's quickly pass a temporary tax increase before congress goes on break!"
@@ -1032,7 +1032,7 @@ USA_gain_support_of_trade_union_desc:0 "Many unions support the exact same polic
  USA_perfect_the_whip_desc:0 "The recently made position of party "whips" have been very effective in getting the entire party behind legislation. We should work on perfecting this idea to get as much of our legislation through as we can."
  USA_flex_political_accomplishments:0 "Flex our Accomplishments"
  USA_flex_political_accomplishments_desc:0 "The Federal Reserve act! The Clayton Antitrust act! The Underwood Simmons Tarrif! The Federal Reserve! Investments in rural America! Woodrow Wilson is clearly succeeding with his idea of "New Nationalism", and all of these achievements can be used to flex Wilsons political might and the popularity of his achievements to congress."
- USA_federal_trade_commission:0 "Federal Trade Commission"
+ USA_federal_trade_commission:0 "An Economy Safe for the Little Man"
  USA_federal_trade_commission_desc:0 "The federal trade commission will be dedicated solely to enforcing Antitrust legislation, significantly accelerating the effort against unfair monopolies."
  USA_national_park_service:0 "National Park Service"
  USA_national_park_service_desc:0 "With the rise of National Parks, a government agency to help manage and run them would be worth looking into. Let's try and make an agency for this purpose."
@@ -1049,7 +1049,7 @@ USA_restrict_transportaion_of_alcohol_desc:0 "We must limit the amount of alcoho
   USA_child_labour_restrictions_desc:0 "Child labour is becoming increasingly unacceptable across the country. We must do the morally right thing and restrict the amount of hours children can work, while also banning the sale of goods outside the united states created by children."
   USA_seamans_act:0 "Seamans Act"
    USA_seamans_act_desc:0 "Being a Marine is one of the most dangerous jobs in the country. Improving the safety and security of United States seamen and eliminate shanghaiing, a practice of tricking people into becoming seaman, should help ease the fears of joining the Marines."
-   USA_compensation_for_injuries:0 "Compensation for Injuries"
+   USA_compensation_for_injuries:0 "Enforce a Safe Working Enviornment"
    USA_compensation_for_injuries_desc:0 "Many workers face injuries due to unsafe working conditions. We should force companies to pay for the medical bills of injuries that are due to company neligance and irresponsibilty."
    USA_sideline_administration_reformers:0 "Sideline Administration Reformers"
    USA_sideline_administration_reformers_desc:0 "The EEC and its members want to expand the federal governments powers even more. This will just make the government even more inefficent and weaken the power of the states, we need to reject these reformers and their ideas."
@@ -1183,6 +1183,8 @@ ww1_USA.146.d:0 "The film 'The Kaiser, Beast of Berlin' has finally came out in 
 USA_nationalize_coal_mines:0 "Nationalize Coal Mines"
 ww1_USA.146.a:0 "This film shows the true nature of the Kaiser!"
 east_home_front:0 "Modify §YThe Home Front§! by\nFactory Output: §G+10.00%§!"
+cnd_home_front:0 "Modify §YThe Home Front§! by\n§YMilitary Factory§! Construction Speed: §G+10.00%§!"
+
 wip_home_front:0 "Modify §YThe Home Front§! by\nFactory Output: §G+10.00%§!\n§YMilitary Factory§! Construction Speed: §G+10.00%§!"
 wlb_home_front:0 "Modify §YThe Home Front§! by\nStability: §G+10.00%§!\nWar Support: §G+10.00%§!\nProduction Efficiency Gain: §G+5.00%§!\nMobilization Speed: §G+10.00%§!"
 clb_home_front:0 "Modify §YThe Home Front§! by\nStability: §R-10.00%§!\nWar Support: §R-10.00%§!\nProduction Efficiency Gain: §R-5.00%§!\nFactory Output: §G+8.50%§!\nProduction Efficiency Cap: §G+5.00%§!\nMobilization Speed: §G+10.00%§!"
@@ -1282,7 +1284,7 @@ concun.tt:0 "We can find these decisions in the Political Actions category"
 2_times.tt:0 "This decision can be taken 2 times"
 3_times.tt:0 "This decision can be taken 3 times"
 USA_consumer_based_economy13:0 "Unusual Economic Conditions"
-USA_sherman_anti_trust:0 "Clayton Antitrust Act"
+USA_sherman_anti_trust:0 "A Tight Leash on Parasitic Trusts"
 USA_sherman_anti_trust_desc:0 "There are still many issues with unfair big business domination of the market. Large price discriminations that allow monopolies to charge way over their actual value, several merges going completly unchecked, and so called "holding companies" who buy and control the ownership interests of other companies."
 USA_roll_out_new_regulations:0 "Rollout New Regulations"
 USA_roll_out_new_regulations_desc:0 "It's time to put the nail in the coffin for these unfair monopolies, who have dominated the market for far too long. By finalizing the anti monopoly laws, we can hopefully prevent the rise of any second standard oil or general electric company again, and ensure a truly free market for all. "
@@ -1366,7 +1368,7 @@ appointment2:0 "We will mantain a narrow majority in the house after the 1910 mi
 mexican_revolution.tt:0 "§YThis focus will be autocompleted when the§! §GMexican§! revolu§Rtion§! §Yhas begun§!"
 focus_will_be_auto_completed:0 "This focus will be §Yautocompleted§! through an event" 
 ccecreate.tt:0 "This focus will be autocompleted when the §YEconomic Efficiency Commission§! is created" 
-USA_federal_reserve_act:0 "Federal Reserve Act"
+USA_federal_reserve_act:0 "Guide the Private Banking Sector"
 USA_federal_reserve_act_desc:0 "A Federal Bank has long been called for by progressives. While the banking system does need reform, this would be too far. Let's instead set up the federal reserve that will guide the financial system by setting interest rates, managing the money supply, and regulating financial markets."
  USA_federal_reserve_compromise:0 "Federal Reserve Compromise"
  USA_federal_reserve_compromise_desc:0 "While a national bank is desired by most progressives, it's relatively unpopular amongst moderates, and we wont be able to gurantee it passes. We shall instead look towards a federal reserve system, which would keep private banks but give the government authority to manage the money supply, set interest rates, and regulate financial institutions. "
