--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8363,6 +8363,7 @@ USA_protect_steel_industry:0 "Protect Steel Industry"
  USA_congress_investigation_of_the_army_desc:0 "The state of the American army is abysmal, to say the least. With §Routdated tactics§!, §Ra lack of men§!, §Routdated equipment§!, and §Rlittle funding§!, the army is in a pitiful state. To show just how bad it has gotten, several army officals have gotten together to show §5Congress§! just how bad it is in an attempt to lobby for more army funding."
 USA_the_final_report:0 "The Final Report"
 USA_the_final_blow:0 "Oust Jose Mandriz"
+USA_exploit_nicaraguan:0 "Exploit Nicaragua"
 elect_rep:0 "Electable 1912 Presidents include §YWilliam Taft§! §YTheodore Roosevelt§! and §YJoseph Cannon§!"
 elect_dem:0 "Electable 1912 Presidents include §YWoodrow Wilson§! §YChamp Clark§! and one §YSecret Canidate§!"
 USA_hoover_food:0 "Efforts of the Food Administration"
