go ahead Silent

--- a/localisation/english/ww1_parliament_gui_l_english.yml
+++ b/localisation/english/ww1_parliament_gui_l_english.yml
@@ -63,3 +63,22 @@
   party_11_text_desc:0 "§LFrom one year to the another, the number of seats in parliament can change, which sometimes causes empty seats to appear.§!"
 
 
+  #Italy and pizza are joining the ring of reworked nations
+  ITA_parliament_gui_title:0 "Chamber of Deputies"
+  ITA_semicircle_parliament_gui_title:0 "Chamber of Deputies"
+  ITA_parliament_semicircle_main_entry_tt:0 "[ITA_GetParliamentSeatName] - [ITA_GetParliamentPartyName]"
+  ITA_parliament_party_description:0 "[ITA_GetParliamentPartyName]\n[ITA_GetParliamentPartyDescription]"
+  ITA_parliament_seat_text:0 "Seat [?temp_seat|Y0]"
+  ITA_parliament_member_text:0 "[ITA_GetParliamentPartyName] - [?ITA_parliament_seat_array^ITA_parliament_member_index] Seats"
+  ITA_parliament_main_icon_tt: "§HForza Italia !§!"
+  ITA_parliament_sp_desc:0 "If §YSilent§! takes control of the §YParliament§! and modifies it, a §R§CSpace-time Rupture§! may occur, destroying the §Cspace-time continuum§!.§!"
+  ITA_parliament:0 "Parliament"
+
+
+  ITA_parliament_title:0 "Camera dei deputati"
+  ITA_parliament_desc2:0 "- Text about the current control over administration - "
+
+
+  ITA_party_1_text:0 "§GPizza Party§!"
+  
+  ITA_party_1_text_desc:0 "§LFounded in 2024 by §YSilent Enforcer§!, the Pizza Party unite all italian dishes of Europe, making it the first culinar party of the world.§!"
