--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -3713,6 +3713,11 @@
  SER_fortify_the_rivers:0 "Fortify the Rivers"
  SER_solun_process_tt:0 "We will launch a series of show trials against the Black Hand and other conspirators. This move will serve to §Rbehead§! the §bBlack Hand§! and get rid of the conspirators as whole!"
 
+ #ITALY Italy ITA_
+
+ ITA_giolittian_shadow:0 "Giolitti Shadow"
+ ITA_giolittian_shadow_desc:0 "Prime Minister Luzzatti is a good economist, but a bad politician. His inability to lead major debates and convince the opposition undermines our ability to reform the country. Fortunately, someone, in the shadows, is interfering more and more intensely in cabinet politics."
+
  ITA_istituto_nazionale_delle_assicurazioni:0 "Istituto Nazionale delle Assicurazioni"
  ITA_istituto_nazionale_delle_assicurazioni_desc:0 "Our minister of agriculture has proposed an interesting idea, in which we nationalize the insurance industry to maximize production. We should carry out his plans."
  ITA_Ilva:0 "Invest in Ilva"
