--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -218,6 +218,9 @@
  soldier_king:0 "Il Re soldato"
  soldier_king_desc:0 "The "Soldier King" remind the Italians of their recent victories in the Great War. His presence and their loyalty to him is a great source of unity for the people."
  weak_ruler:0 "Weak Ruler"
+ weak_ruler2:0 "Weak Ruler"
+ inept_compromiser:0 "Inept Compromiser"
+ puppet_minister:0 "Puppet Minister"
  POLITICS_LUIGI_LUZZATTI_DESC:0 "He only holds office at Giolitti's good pleasure."
  undistinguished_suit:0 "Undistinguished Suit"
  mafioso:0 "Mafioso"
