--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -18,7 +18,7 @@
 
  RUS_need_majority_sd: "Starts a vote in the State Duma. In order to §Gpass the law§!, we need a §Gmajority§! of §Yloyal MPs§!. If we don't, the law will be §Rrejected§!, and we will be able to try to pass the law again in §Y180 days§!."
  RUS_need_majority_funding: "Starts a vote in the State Duma. In order to §Gpass the law§!, we need a §Gmajority§! of §Yloyal MPs§!. If we don't, the law will be §Rrejected§!, and we will be able to try to pass the law again in §Y365 days§!."
- RUS_need_majority_sc: "Starts a vote in the State Council. In order to §Gpass the law§!, we need §G100%§! of §YLaw Acceptance§!, as well as the §Gmajority§! of §Yloyal Duma MPs§!. If we don't, the law will be §Rrejected§!, and we will have to pass the law again in the §YState Duma§!."
+ RUS_need_majority_sc: "Starts a vote in the State Council. In order to §Gpass the law§!, we need to negotiate §G100%§! of §YLaw Acceptance§!, as well as maintain the §Gmajority§! of §Yloyal Duma MPs§!. If we don't, the law will be §Rrejected§!, and we will have to pass the law again in the §YState Duma§!."
  RUS_if_the_law_passes: "\nIf the law §Gpasses§!:"
  RUS_if_the_law_is_rejected: "\nIf the law is §Rrejected§!:"
  RUS_if_the_law_passes_in_sc: "\nIf the law §Gpasses§! in the §YState Council§!:"
@@ -281,6 +281,8 @@
  not_has_authoritarian_zemstvo_scripted_trigger_tt: "Does not have national spirit §YAuthoritarian Zemstvo§!"
  duma_is_active_scripted_trigger_tt: "Not: The parliament has been dismissed"
  duma_is_not_active_scripted_trigger_tt: "The parliament has been dismissed"
+ has_tsardom_of_poland_scripted_trigger_tt: "Has Modifier: §YTsardom of Poland§!"
+ controls_poland_scripted_trigger_tt: "Controls territories of Tsardom of Poland"
 
  # National Focuses
  RUS_stolypins_reforms: "Stolypin's Reforms"
