Russian duma seats text icons

--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -1,18 +1,18 @@
 ﻿l_english:
  # Decisions
- RUS_increase_loyalty_socialist: "Improve relations with §RSocialist§! MPs"
- RUS_increase_loyalty_center_left: "Improve relations with $party_2_text_rus$ MPs"
- RUS_increase_loyalty_center_right: "Improve relations with $party_3_text_rus$ MPs"
- RUS_increase_loyalty_far_right: "Improve relations with §qReactionary§! MPs"
+ RUS_increase_loyalty_socialist: "Improve relations with £RUS_parliament_party_icon|1 §RSocialist§! MPs"
+ RUS_increase_loyalty_center_left: "Improve relations with £RUS_parliament_party_icon|2 $party_2_text_rus$ MPs"
+ RUS_increase_loyalty_center_right: "Improve relations with £RUS_parliament_party_icon|3 $party_3_text_rus$ MPs"
+ RUS_increase_loyalty_far_right: "Improve relations with £RUS_parliament_party_icon|4 §qReactionary§! MPs"
 
  RUS_socialist_crackdown: "Socialist Crackdown"
  RUS_apply_administrative_pressure: "Apply Administrative Pressure"
  RUS_use_the_priesthood: "Use the Priesthood"
 
- RUS_modify_loyalty_socialists_tt: "Changes the §Yloyalty§! of $party_1_text_rus$ by §Y[?RUS_modify_loyalty_socialists_var|+=1%%]§!.\n"
- RUS_modify_loyalty_center_left_tt: "Changes the §Yloyalty§! of $party_2_text_rus$ by §Y[?RUS_modify_loyalty_center_left_var|+=1%%]§!.\n"
- RUS_modify_loyalty_center_right_tt: "Changes the §Yloyalty§! of $party_3_text_rus$ by §Y[?RUS_modify_loyalty_center_right_var|+=1%%]§!.\n"
- RUS_modify_loyalty_far_right_tt: "Changes the §Yloyalty§! of $party_4_text_rus$ by §Y[?RUS_modify_loyalty_far_right_var|+=1%%]§!.\n"
+ RUS_modify_loyalty_socialists_tt: "Changes the §Yloyalty§! of £RUS_parliament_party_icon|1 $party_1_text_rus$ by §Y[?RUS_modify_loyalty_socialists_var|+=1%%]§!.\n"
+ RUS_modify_loyalty_center_left_tt: "Changes the §Yloyalty§! of £RUS_parliament_party_icon|2 $party_2_text_rus$ by §Y[?RUS_modify_loyalty_center_left_var|+=1%%]§!.\n"
+ RUS_modify_loyalty_center_right_tt: "Changes the §Yloyalty§! of £RUS_parliament_party_icon|3 $party_3_text_rus$ by §Y[?RUS_modify_loyalty_center_right_var|+=1%%]§!.\n"
+ RUS_modify_loyalty_far_right_tt: "Changes the §Yloyalty§! of £RUS_parliament_party_icon|4 $party_4_text_rus$ by §Y[?RUS_modify_loyalty_far_right_var|+=1%%]§!.\n"
  
  rus_parliament_sway_tooltip: "[?sway_value_tt] [GetParliamentLoserName] MPs will join the [GetParliamentWinnerName]"
 
@@ -43,13 +43,13 @@
  RUS_shift_right_desc: "In order to pass legislation effectively, we need to keep in mind the Balance of factions in the State Council. By dismissing some MPs and introducing replacements to them, we can ensure that our allied factions get the most representation."
  RUS_shift_left: "Shift Faction Balance to the §rLeft§!"
  RUS_shift_left_desc: "In order to pass legislation effectively, we need to keep in mind the Balance of factions in the State Council. By dismissing some MPs and introducing replacements to them, we can ensure that our allied factions get the most representation."
- RUS_discussion_left: "Concessions from $party_1_text_rus$"
+ RUS_discussion_left: "Concessions from £RUS_parliament_party_icon|1 $party_1_text_rus$"
  RUS_discussion_left_desc: "To pass this law, some concessions to the State Council have to be made, but doing so will upset some MPs in the State Duma, making them retract their support for our government. However, being balanced is important, or else we might risk Duma not accepting the negotiated law."
- RUS_discussion_center_left: "Concessions from $party_2_text_rus$"
+ RUS_discussion_center_left: "Concessions from £RUS_parliament_party_icon|2 $party_2_text_rus$"
  RUS_discussion_center_left_desc: "To pass this law, some concessions to the State Council have to be made, but doing so will upset some MPs in the State Duma, making them retract their support for our government. However, being balanced is important, or else we might risk Duma not accepting the negotiated law."
- RUS_discussion_right: "Concessions from $party_3_text_rus$"
+ RUS_discussion_right: "Concessions from £RUS_parliament_party_icon|3 $party_3_text_rus$"
  RUS_discussion_right_desc: "To pass this law, some concessions to the State Council have to be made, but doing so will upset some MPs in the State Duma, making them retract their support for our government. However, being balanced is important, or else we might risk Duma not accepting the negotiated law."
- RUS_discussion_far_right: "Concessions from $party_4_text_rus$"
+ RUS_discussion_far_right: "Concessions from £RUS_parliament_party_icon|4 $party_4_text_rus$"
  RUS_discussion_far_right_desc: "To pass this law, some concessions to the State Council have to be made, but doing so will upset some MPs in the State Duma, making them retract their support for our government. However, being balanced is important, or else we might risk Duma not accepting the negotiated law."
  RUS_prolong_vote: "Prolong the Vote"
  RUS_prolong_vote_desc: "Due to complications during the negotiations, to pass this law we have to prolong the vote, making us able to draw more support to it in both houses of parliament."
@@ -501,11 +501,11 @@
  opposition: "§OOpposition§!"
  obstruction: "§RObstructive§!"
 
- RUS_far_right_law_tt: "\nThis is a $party_4_text_rus$ law. With the current dominant faction the expected base §YLaw Acceptance§! is [base_law_acceptance_scripted_trigger]\n"
- RUS_center_right_law_tt: "\nThis is a $party_3_text_rus$ law. With the current dominant faction the expected base §YLaw Acceptance§! is [base_law_acceptance_scripted_trigger]\n"
- RUS_centrist_law_tt: "\nThis is a §3Centrist§! law, meaning it favours reformist elements from both $party_2_text_rus$ and $party_3_text_rus$. With the current dominant faction the expected base §YLaw Acceptance§! is [base_law_acceptance_scripted_trigger]\n"
- RUS_center_left_law_tt: "\nThis is a $party_2_text_rus$ law. With the current dominant faction the expected base §YLaw Acceptance§! is [base_law_acceptance_scripted_trigger]\n"
- RUS_socialist_law_tt: "\nThis is a $party_1_text_rus$ law. With the current dominant faction the expected base §YLaw Acceptance§! is [base_law_acceptance_scripted_trigger]\n"
+ RUS_far_right_law_tt: "\nThis is a £RUS_parliament_party_icon|4 $party_4_text_rus$ law. With the current dominant faction the expected base §YLaw Acceptance§! is [base_law_acceptance_scripted_trigger]\n"
+ RUS_center_right_law_tt: "\nThis is a £RUS_parliament_party_icon|3 $party_3_text_rus$ law. With the current dominant faction the expected base §YLaw Acceptance§! is [base_law_acceptance_scripted_trigger]\n"
+ RUS_centrist_law_tt: "\nThis is a §3Centrist§! law, meaning it favours reformist elements from both £RUS_parliament_party_icon|2 $party_2_text_rus$ and £RUS_parliament_party_icon|3 $party_3_text_rus$. With the current dominant faction the expected base §YLaw Acceptance§! is [base_law_acceptance_scripted_trigger]\n"
+ RUS_center_left_law_tt: "\nThis is a £RUS_parliament_party_icon|2 $party_2_text_rus$ law. With the current dominant faction the expected base §YLaw Acceptance§! is [base_law_acceptance_scripted_trigger]\n"
+ RUS_socialist_law_tt: "\nThis is a £RUS_parliament_party_icon|1 $party_1_text_rus$ law. With the current dominant faction the expected base §YLaw Acceptance§! is [base_law_acceptance_scripted_trigger]\n"
 
  RUS_add_law_acceptance_tt: "Changes §YLaw Acceptance§! by §G[?RUS_add_law_acceptance_var|+1%%]§!"
  base_law_acceptance_tt: "The expected base §YLaw Acceptance§! is [base_law_acceptance_scripted_trigger]\n"
