new german parties setup

--- a/localisation/english/ww1_parliament_gui_l_english.yml
+++ b/localisation/english/ww1_parliament_gui_l_english.yml
@@ -66,7 +66,14 @@
 
  #SCRIPTED GUIS
  GER_semicircle_parliament_gui_title:0 "The Reichstag"
- GER_factions_report_desc:0 "§tLeftists§! control §Y[?GER_left_faction|Y0] seats§!\n§gCentrists§! control §Y[?GER_center_faction|Y0] seats§!\n§3Rightists§! control §Y[?GER_right_faction|Y0] seats§!\n§LNeutrals§! control §Y[?GER_neutral_faction|Y0] seats§!"
+ GER_leftist_factions_text:0 "§tLeftists§! factions (total seats §Y[?GER_left_faction|Y0]§!):"
+ GER_leftist_factions_list_text:0 "£GER_parliament_party_icon|1 $GER_party_SB_text$ - [?SB] Seats\n£GER_parliament_party_icon|2 $GER_party_USPD_text$ - [?USPD]\n£GER_parliament_party_icon|3 $GER_party_SPD_text$ - [?SPD]\n£GER_parliament_party_icon|4 $GER_party_FVP_text$ - [?FVP]"
+ GER_centrists_factions_text:0 "§gCentrist§! factions (total seats §Y[?GER_center_faction|Y0]§!):"
+ GER_centrists_factions_list_text:0 "£GER_parliament_party_icon|5 $GER_party_NLP_text$ - [?NLP] Seats\n£GER_parliament_party_icon|9 $GER_party_Z_text$ - [?Z] Seats"
+ GER_rightists_factions_text:0 "§3Rightist§! factions (total seats §Y[?GER_right_faction|Y0]§!):"
+ GER_rightists_factions_list_text:0 "£GER_parliament_party_icon|10 $GER_party_DRP_text$ - [?DRP] Seats\n£GER_parliament_party_icon|11 $GER_party_DKP_text$ - [?DKP] Seats\n£GER_parliament_party_icon|12 $GER_party_WV_text$ - [?WV] Seats\n£GER_parliament_party_icon|13 $GER_party_DR_text$ - [?DR] Seats\n"
+ GER_neutral_factions_text:0 "§LNeutral§! factions (total seats §Y[?GER_neutral_faction|Y0] seats§!):"
+ GER_neutral_factions_list_text:0 "£GER_parliament_party_icon|6 $GER_party_RP_text$ - [?RP] Seats\n£GER_parliament_party_icon|7 $GER_party_NM_text$ - [?NM] Seats\n£GER_parliament_party_icon|8 $GER_party_NA_text$ - [?NA] Seats\n"
  GER_total_count_desc:0 "397"
  GER_total_count_tt:0 "§gReichstag seats§!"
 
@@ -84,29 +91,33 @@
  GER_the_parliament_seats_will_change:0 "§YParliament seats will change.§!"
 
  #PARTIES
- GER_party_1_text:0 "§QSpartakusbund§!"
- GER_party_1_text_desc:0 "§L§QSpartakusbund/Spartacus League§!\n§!"
- GER_party_2_text:0 "§RUSPD§!"
- GER_party_2_text_desc:0 "§L§RUnabhängige Sozialdemokratische Partei Deutschlands/Independent Social Democratic Party of Germany§!\n§!"
- GER_party_3_text:0 "§tSPD§!"
- GER_party_3_text_desc:0 "§L§tSozialdemokratische Partei Deutschlands/Social Democratic Party of Germany§!\nEstablished in 1863. It was one of the earliest §RMarxist-influenced§! parties in the world. The SPD is Europe's largest §RMarxist§! party, and the most popular political party in Germany.§!"
- GER_party_4_text:0 "§8FVp§!"
- GER_party_4_text_desc:0 "§L§8Fortschrittliche Volkspartei/Progressive People's Party§!\n§!"
- GER_party_5_text:0 "§pNLP§!"
- GER_party_5_text_desc:0 "§L§pNationalliberale Partei/National Liberal Party§!\n§!"
- GER_party_6_text:0 "§vMinderheiten§!"
- GER_party_6_text_desc:0 "§L§vNationale Minderheiten/National minorities§!\n§!"
- GER_party_7_text:0 "§gUnabhängige.§!"
- GER_party_7_text_desc:0 "§L§gUnabhängige/Independents§!\n§!"
+ GER_party_SB_text:0 "§QSpartakusbund§!"
+ GER_party_SB_text_desc:0 "§L§QSpartakusbund/Spartacus League§!\n§!"
+ GER_party_USPD_text:0 "§RUSPD§!"
+ GER_party_USPD_text_desc:0 "§L§RUnabhängige Sozialdemokratische Partei Deutschlands/Independent Social Democratic Party of Germany§!\n§!"
+ GER_party_SPD_text:0 "§tSPD§!"
+ GER_party_SPD_text_desc:0 "§L§tSozialdemokratische Partei Deutschlands/Social Democratic Party of Germany§!\nEstablished in 1863. It was one of the earliest §RMarxist-influenced§! parties in the world. The SPD is Europe's largest §RMarxist§! party, and the most popular political party in Germany.§!"
+ GER_party_FVP_text:0 "§8FVp§!"
+ GER_party_FVP_text_desc:0 "§L§8Fortschrittliche Volkspartei/Progressive People's Party§!\n§!"
+ GER_party_NLP_text:0 "§pNLP§!"
+ GER_party_NLP_text_desc:0 "§L§pNationalliberale Partei/National Liberal Party§!\n§!"
+ GER_party_RP_text:0 "§7Regionalparteien§!"
+ GER_party_RP_text_desc:0 "§L§7Regionalparteien/Regional Parties§!\n§!"
+ GER_party_NM_text:0 "§vMinderheiten§!"
+ GER_party_NM_text_desc:0 "§L§vNationale Minderheiten/National minorities§!\n§!"
+ GER_party_NA_text:0 "§gFraktionslose§!"
+ GER_party_NA_text_desc:0 "§L§gFraktionslose/Non-affiliated§!\n§!"
  GER_party_8_text:0 "§nBdL/BB/DBB§!"
  GER_party_8_text_desc:0 "§L§nBund der Landwirte/Agrarian League\nBayerischer Bauernbund/Bavarian Peasants' League\nDeutscher Bauernbund/German Farmers’ Association§!\n§!"
  GER_party_9_text:0 "§7DHP§!"
  GER_party_9_text_desc:0 "§L§7Deutsch-Hannoversche Partei/German-Hanoverian Party§!\n§!"
- GER_party_10_text:0 "§qZ§!"
- GER_party_10_text_desc:0 "§L§qDeutsche Zentrumspartei/German Centre Party§!\nFormed in 1870, it successfully battled the §YKulturkamp§! waged by §gChancellor Otto von Bismarck§! against the §qCatholic Church§!.§!"
- GER_party_11_text:0 "§3DRP§!"
- GER_party_11_text_desc:0 "§L§3Deutsche Reichspartei/German Reich Party§!\n§!"
- GER_party_12_text:0 "§cDkP§!"
- GER_party_12_text_desc:0 "§L§cDeutschkonservative Partei/German Conservative Party§!\n§!"
- GER_party_13_text:0 "§NAntisemiten§!"
- GER_party_13_text_desc:0 "§L§NAntisemitenparteien/Anti-Semitic parties§!\n§!"
+ GER_party_Z_text:0 "§qZ§!"
+ GER_party_Z_text_desc:0 "§L§qDeutsche Zentrumspartei/German Centre Party§!\nFormed in 1870, it successfully battled the §YKulturkamp§! waged by §gChancellor Otto von Bismarck§! against the §qCatholic Church§!.§!"
+ GER_party_DRP_text:0 "§3DRP§!"
+ GER_party_DRP_text_desc:0 "§L§3Deutsche Reichspartei/German Reich Party§!\n§!"
+ GER_party_DKP_text:0 "§cDkP§!"
+ GER_party_DKP_text_desc:0 "§L§cDeutschkonservative Partei/German Conservative Party§!\n§!"
+ GER_party_WV_text:0 "§dWirtschaftliche Vereinigung§!"
+ GER_party_WV_text_desc:0 "§d§NWirtschaftliche Vereinigung/Economic Union§!\n§!"
+ GER_party_DR_text:0 "§NDeutsche Reformpartei§!"
+ GER_party_DR_text_desc:0 "§L§NWirtschaftliche Vereinigung/German Reform Party§!\n§!"
