alexandria vp as they asked

--- a/localisation/english/ww1_victory_points_l_english.yml
+++ b/localisation/english/ww1_victory_points_l_english.yml
@@ -596,6 +596,7 @@
  VICTORY_POINTS_11785:0 "Harrisburg"
  VICTORY_POINTS_11817:0 "Williamsport"
  VICTORY_POINTS_11782:0 "Trenton"
+ VICTORY_POINTS_873:0 "Alexandria"
 
  PETROGRAD_PROV:0 "Petrograd"
  LENINGRAD_PROV:0 "Leningrad"
