idk why but when i see men twerking with tight underwear i get an erection. sometimes out of habit i start twerking it like the men and im not sure why

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -993,7 +993,7 @@ USA_stock_homestead_act:0 "Stock-Raising Homestead Act"
 USA_united_democratic_party:0 "United Democratic Party"
 USA_gain_socialist_support:0 "Theory of 'Socialism and Democracy'"
 USA_puerto_rico_government_reform:0 "Puerto Rico State Government Reform"
- USA_end_railway_strike:0 "End Railway Strike"
+ USA_end_railway_strike:0 "Quell Striking Railway Workers"
 USA_global_naval_power_potential:0 "Global Naval Power Potential"
 USA_pursue_expansion_of_naval_production:0 "Pursue Expansion of Naval Production"
 USA_old_policy_in_latin:0 "Oppose Revolutionaries in Latin America"
@@ -1049,6 +1049,9 @@ USA_restrict_transportaion_of_alcohol_desc:0 "We must limit the amount of alcoho
   USA_child_labour_restrictions_desc:0 "Child labour is becoming increasingly unacceptable across the country. We must do the morally right thing and restrict the amount of hours children can work, while also banning the sale of goods outside the united states created by children."
   USA_seamans_act:0 "Seamans Act"
    USA_seamans_act_desc:0 "Being a Marine is one of the most dangerous jobs in the country. Improving the safety and security of United States seamen and eliminate shanghaiing, a practice of tricking people into becoming seaman, should help ease the fears of joining the Marines."
+ww1_USA.159.t:0 "American Union Against Militarism"
+ww1_USA.159.d:0 "With tensions between the United States and the other Great Powers rising as of late, there has been an increased worry that America is heading towards war as of late. In an attempt to pressure the government into continued neutrality, tens of thousands of Americans have signed up for the official anti war movement of the United States, the American Union against Militarism. This group has been spreading increased publications as of late, detailing the horror of the war in Europe in an attempt to sway Americans against war."
+ww1_USA.159.a:0 "They're free to do what they want, I suppose"
    USA_compensation_for_injuries:0 "Enforce a Safe Working Enviornment"
    USA_compensation_for_injuries_desc:0 "Many workers face injuries due to unsafe working conditions. We should force companies to pay for the medical bills of injuries that are due to company neligance and irresponsibilty."
    USA_sideline_administration_reformers:0 "Sideline Administration Reformers"
@@ -1154,7 +1157,7 @@ infras_eec:0 "If we have completed the focus "§YStrengthen Control Over Federal
 USA_farm_security_administration:0 "Support the Country Life Movement"
 USA_farm_security_administration_desc:0 "Rural life has clearly fallen greatly behind those in urban areas. Those in the country life movement have noticed this, and encouraged the government to increase investments in rural American infrastructure. This seems logical enough, and thus we should go through with it."
 USA_henry_stimson:0 "Henry Stimson"
-USA_press_speaker:0 "Befriend the Press"
+USA_press_speaker:0 "Court the Fourth Estate"
 USA_foster_flight_to_cities:0 "Foster Rural Flight to Cities"
 USA_foster_flight_to_cities_desc:0 "While many in the country life movement complain that rural areas are declining in population areas are declining in population, this is not necessarily a bad thing. Urbanization is a natural thing in modern economies, and it's usually a good thing. We should encourage those on farms to seek out better lifes in factories."
 USA_rural_price_controls_idea:0 "Agricultural Price Supports"
