--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8262,7 +8262,7 @@ stinson.ttt:0 "Modify §YUnited States Army§! by (Army Experience Gain §G+0.03
 
 stinson.tt:0 "Modify §YUnited States Army§! by (Army Experience Gain §G+0.10§! daily)"
 stinsone.tt:0 "Modify §YUnited States Army§! by (Air Experience Gain §G+0.10§! daily)"
-USA_the_great_game:0 "Ensure Proper Balance"
+USA_the_great_game:0 "Mastering the Game of Politics"
 admin_shift_right.tt:0 "The Administration will shift §cRight§!"
 USA_assemble_the_cabinet:0 "Assemble the Cabinet"
 railway.tt:0 "For every level of §SProgressivism§!, stacking up to 5 times, this focus will also give us:\nStability: §G+2.00%§!\nBecause of our current level of §SProgressivism§!, we are gaining:"
